# codemanager

./: .gitignore  CHANGELOG.md  README.md  bun.lockb  index.html  package.json  requirements.txt  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build_and_release.yml
app/: background.ts  tsconfig.json
app/helpers/: create-window.ts
client/: .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json
client/src/: infer.d.ts  preload.d.ts  types.d.ts
scripts/: codemg_cli.py  installer.py  project_scripts.py  requirements.txt  setup.py  startup.py
scripts/cli/: args_parser.py  config.py  custom_classes.py  db_functions.py  functions.py  project_builders.py  utils.py
scripts/lib/: config.py  utils.py
scripts/python/: .gitignore  installer.py
scripts/start/: index.ts
scripts/wix/: codemg-setup.wsx
server/: .gitignore  README.md  package.json  tailwind.config.ts
server/src/: database.ts  env.ts  index.ts  preload.d.ts  types.d.ts  utils.ts
server/start/: dbsync.ts  server.ts
src/: background.ts  loader.html  preload.ts  types.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: constants.rs  db.rs  main.rs
src-tauri/src/internal/: features.rs  utils.rs
src-tauri/src/scc/: constants.rs  mod.rs  utils.rs
src-tauri/src/schemas/: app_response.rs  mod.rs  project.rs  project_claims.rs
src/components/: Header.tsx  SelectBox.tsx  Sidebar.tsx  Titlebar.tsx
start/: build.ts  development.ts  lib.ts
tslib/: config.js  schema.ts  utils.ts
wix/: codemg-setup.wsx
(+53 files in other folders)
