[package]
name = "codemanager"
version = "0.0.3"
description = "A Codebases Manager (built with Tauri)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1", features = [
    "dialog-open",
    "window-close",
    "window-hide",
    "window-unminimize",
    "window-unmaximize",
    "window-start-dragging",
    "window-show",
    "window-minimize",
    "window-maximize",
    "shell-execute",
    "shell-sidecar",
    "process-command-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Personally added
dirs = "3.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
chrono = "0.4.38"
lazy_static = "1.4.0"
parking_lot = "0.12.2"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
secrets = []
